@@ -1,6 +1,7 @@
-# test if subsetting by rownames of a pdata.frame preserves index
+# various test of subsetting ("indexing") a pdata.frame, e.g. that subsetting by rownames preserves the index
 #  (pre rev. 187/189 all entries were set to NA)
 #  (pre rev. 251 subsetting a pdata.frame added extra information due to coercing rules of "[.data.frame")
+#  (pre rev. 668 subsetting a pdata.frame with [.pdata.frame such that a single column (pseries) is returned was lacking names)
 
 library(plm)
 data("Grunfeld", package = "plm")
@@ -29,6 +30,17 @@ attr(pGrunfeld[[3]], which = "index")
 if (anyNA(attr(pGrunfeld[["inv"]], which = "index"))) stop("FAIL: NA in index")
 if (anyNA(attr(pGrunfeld[[3]], which = "index"))) stop("FAIL: NA in index")
 
+
+# check that extracting a single column (which becomes a pseries) yield the same
+# result for the three extraction methods $.pdata.freme, [[.pdata.frame, and [.pdata.frame
+extr1 <- pGrunfeld$inv
+extr2 <- pGrunfeld[["inv"]]
+extr3 <- pGrunfeld[ , "inv"]
+if (!isTRUE(all.equal(extr1, extr2))) stop("extraction of single column (pseries) does not yield same results for $.pdata.frame and [[.pdata.frame")
+if (!isTRUE(all.equal(extr1, extr3))) stop("extraction of single column (pseries) does not yield same results for $.pdata.frame and [.pdata.frame")
+
+# check that row names are kept and subsetted by [.pdata.frame when a single column (pseries) is returned
+if (!isTRUE(all.equal(names(pGrunfeld[1:5 , "inv"]), row.names(pGrunfeld)[1:5]))) stop("row names not correctly subsetted by [.pdata.frame")
 
 
 ############ subsetting used to change the pdata.frame
@@ -175,7 +187,7 @@ if (!all(c(dim(pX[1, drop = TRUE])[1],  2L) == dim(attr(pX[1, drop = TRUE],  "in
 if (!all(c(dim(pX[1, drop = FALSE])[1], 2L) == dim(attr(pX[1, drop = FALSE], "index")))) stop("index has wrong dimension after subsetting")
 
 
-####### test return values numeric(0) etc and especially NULL
+####### test return values (named) numeric(0) etc and especially NULL
 
 ## compare pdata.frame() to data.frame() in case of subsetting with non-existent return values
 # firm 31 is non-existent
@@ -190,7 +202,7 @@ pGrunfeld[pGrunfeld$firm == "31", "value"]
 
 Grunfeld[Grunfeld$firm == "31", "value"]
 
-#### since R 3.4.0 the  following two cases gave a warning which is pacified in plm rev. 626
+#### since R 3.4.0 the following two cases gave a warning which was pacified in rev. 626
 # Warning in structure(mydata, index = index, class = base::union("pseries",  :
 #                                                                   Calling 'structure(NULL, *)' is deprecated, as NULL cannot have attributes.
 #                                                                 Consider 'structure(list(), *)' instead.
@@ -200,8 +212,8 @@ pGrunfeld[pGrunfeld$firm == "31", "valueNonExistent"]
 Grunfeld[Grunfeld$firm == "31", "valueNonExistent"]
 
 
+# with existent firm 19
+pGrunfeld[pGrunfeld$firm == "19", "valueNonExistent"]
 
-pGrunfeld[pGrunfeld$firm == "19", "valueX"]
-
-Grunfeld[Grunfeld$firm == "19", "valueX"]
+Grunfeld[Grunfeld$firm == "19", "valueNonExistent"]
 
